@@ -1,5 +1,8 @@
 2006-07-20  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* scm/define-grob-properties.scm (all-user-grob-properties): add
+	strict-grace-spacing.
+
 	* lily/spacing-determine-loose-columns.cc (is_loose_column):
 	support float_grace_columns_.
 
